--- a/3d.html
+++ b/3d.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Liendenmayer</title>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/Tools.js"></script>
+    <script src="js/KeyCodes.js"></script>
+    <script src="js/LindenmayerParser.js"></script>
+    <script src="js/Turtle3D.js"></script>
+    <script src="node_modules/spectrum-colorpicker/spectrum.js"></script>
+    <script src="node_modules/jcanvas/dist/jcanvas.js"></script>
+    <script src="node_modules/three/build/three.min.js"></script>
+    <link rel="stylesheet" href="css/main.css" type="text/css"/>
+</head>
+<body>
 <div id="rightPanel">
     <form id="turtleForm">
         <div class="turtleInput">
@@ -293,3 +309,5 @@
     });
 
 </script>
+</body>
+</html>
