--- a/2d.html
+++ b/2d.html
@@ -11,6 +11,7 @@
     <script src="vendor/spectrum.js"></script>
     <script src="vendor/jcanvas.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css"/>
+    <link rel="stylesheet" href="vendor/spectrum.css" type="text/css"/>
 </head>
 <body>
 
