--- a/3d.html
+++ b/3d.html
@@ -12,6 +12,7 @@
     <script src="vendor/jcanvas.min.js"></script>
     <script src="vendor/three.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css"/>
+    <link rel="stylesheet" href="vendor/spectrum.css" type="text/css"/>
 </head>
 <body>
 <div id="rightPanel">
