--- a/2d.html
+++ b/2d.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Liendenmayer</title>
-    <script src="vendor/jquery.min.js"></script>
-    <script src="js/Tools.js"></script>
-    <script src="js/KeyCodes.js"></script>
-    <script src="js/LindenmayerParser.js"></script>
-    <script src="js/Turtle2D.js"></script>
-    <script src="vendor/spectrum.js"></script>
-    <script src="vendor/jcanvas.min.js"></script>
-    <link rel="stylesheet" href="css/main.css" type="text/css"/>
+    <link rel="stylesheet" href="vendor/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="vendor/spectrum.css" type="text/css"/>
+    <link rel="stylesheet" href="css/main.css" type="text/css"/>
 </head>
 <body>
 
@@ -95,6 +89,14 @@
 
 </canvas>
 
+<script src="vendor/jquery.min.js"></script>
+<script src="vendor/bootstrap.min.js"></script>
+<script src="vendor/spectrum.js"></script>
+<script src="vendor/jcanvas.min.js"></script>
+<script src="js/Tools.js"></script>
+<script src="js/KeyCodes.js"></script>
+<script src="js/LindenmayerParser.js"></script>
+<script src="js/Turtle2D.js"></script>
 <script>
     window.scroll(2250, 2250);
     $("#angle").val(60);
